--- a/notebooks/Data_Products_step_2_extraction.ipynb
+++ b/notebooks/Data_Products_step_2_extraction.ipynb
@@ -87,7 +87,17 @@
    "source": [
     "product_path = \"/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/products.csv\"\n",
     "# products_path = \"./data/interim/products.csv\"\n",
-    "products.to_csv(products_path, index=False)"
+    "products.to_csv(products_path, index=False)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product = products.copy()"
    ]
   },
   {
@@ -193,7 +203,95 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "functions = [\n",
+    "    {\n",
+    "        \"name\": \"describe_product\",\n",
+    "        \"description\": \"Provide a detailed description of a product\",\n",
+    "        \"parameters\": {\n",
+    "            \"type\": \"object\",\n",
+    "            \"properties\": {\n",
+    "                \"Product Summary\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"A brief summary of the product in 100 words\"\n",
+    "                },\n",
+    "                \"What is in the box\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Contents of the product package\"\n",
+    "                },\n",
+    "                \"Technical Facts\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Technical details about the product\"\n",
+    "                },\n",
+    "                \"Features\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Features of the product\"\n",
+    "                },\n",
+    "                \"How the product is used\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Instructions on how to use the product\"\n",
+    "                },\n",
+    "                \"Where the product is used\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Suggested locations or situations where the product can be used\"\n",
+    "                },\n",
+    "                \"User Description\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Description of the ideal user for the product\"\n",
+    "                },\n",
+    "                \"Packaging\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Description of the product's packaging\"\n",
+    "                },\n",
+    "                \"Season\": {\n",
+    "                    \"type\": \"string\",\n",
+    "                    \"description\": \"Season or time of year when the product is typically used\"\n",
+    "                }\n",
+    "            },\n",
+    "            \"required\": [\"Product Summary\", \"What is in the box\", \"Technical Facts\", \"Features\", \"How the product is used\", \"Where the product is used\", \"User Description\", \"Packaging\", \"Season\"]\n",
+    "        },\n",
+    "    }\n",
+    "]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chatbot_responses = dict()\n",
+    "\n",
+    "for i in product.index:\n",
+    "    asin  = product['asin'][i]\n",
+    "    bullets = product['feature_bullets'][i]\n",
+    "    description = product['description'][i]\n",
+    "\n",
+    "    # Get the product review\n",
+    "    print(bullets)\n",
+    "    print(description)\n",
+    "\n",
+    "    messages = [\n",
+    "        {\"role\": \"system\", \"content\": \"You are a highly analytic product researcher in a product development team\"},\n",
+    "        {\"role\": \"user\", \"content\": User_Prompt_1},\n",
+    "        {\"role\": \"assistant\", \"content\": AI_Prompt_1},\n",
+    "        {\"role\": \"user\", \"content\": {\"Product Summary\": bullets, \"What is in the box\": description, \"Technical Facts\": \"\", \"Features\": \"\", \"How the product is used\": \"\", \"Where the product is used\": \"\", \"User Description\": \"\", \"Packaging\": \"\", \"Season\": \"\"}} # replace these with the appropriate values\n",
+    "    ]\n",
+    "\n",
+    "    # Send the prompt to the chatbot and get the response\n",
+    "    response = openai.ChatCompletion.create(\n",
+    "        model=\"gpt-3.5-turbo\",\n",
+    "        messages=messages,\n",
+    "        functions=functions,\n",
+    "        function_call={\"name\": \"describe_product\"},\n",
+    "        temperature=0\n",
+    "    )\n",
+    "\n",
+    "    # Process the response and store in the dictionary\n",
+    "    chatbot_responses[asin] = response[\"choices\"][0][\"message\"][\"content\"]\n",
+    "    product.loc[i, 'product_description_data'] = chatbot_responses[asin]\n",
+    "    print(response[\"choices\"][0][\"message\"][\"content\"])\n"
+   ]
   },
   {
    "cell_type": "code",
