--- a/notebooks/Data_reviews_step_1_AmazonScrapperFinal.ipynb
+++ b/notebooks/Data_reviews_step_1_AmazonScrapperFinal.ipynb
@@ -73,7 +73,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "products = pd.read_csv(\"/Users/vladbordei/Documents/Development/ProductExplorer/data/raw/RaisedGardenBed/products(Raised Garden Bed)_1686762019761.csv\")"
+    "# products = pd.read_csv(\"/Users/vladbordei/Documents/Development/ProductExplorer/data/raw/RaisedGardenBed/products(Raised Garden Bed)_1686762019761.csv\")"
    ]
   },
   {
