--- a/notebooks/LllamaIndex.ipynb
+++ b/notebooks/LllamaIndex.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'documents' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 6\u001b[0m\n\u001b[1;32m      2\u001b[0m service_context \u001b[39m=\u001b[39m ServiceContext\u001b[39m.\u001b[39mfrom_defaults(llm_predictor\u001b[39m=\u001b[39mllm_predictor)\n\u001b[1;32m      4\u001b[0m \u001b[39m# build index\u001b[39;00m\n\u001b[1;32m      5\u001b[0m index \u001b[39m=\u001b[39m VectorStoreIndex\u001b[39m.\u001b[39mfrom_documents(\n\u001b[0;32m----> 6\u001b[0m     documents, service_context\u001b[39m=\u001b[39mservice_context)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'documents' is not defined"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "# configure service context\n",
@@ -65,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,9 +392,9 @@
    "outputs": [],
    "source": [
     "reviews_query_engine = reviews_index.as_query_engine(similarity_top_k=5)\n",
-    "products_query_engine = products_index.as_query_engine(similarity_top_k=2)\n",
+    "products_query_engine = products_index.as_query_engine(similarity_top_k=5)\n",
     "weighted_graph_query_engine = weighted_graph_index.as_query_engine(similarity_top_k=5)\n",
-    "product_summary_query_engine = product_summary_index.as_query_engine(similarity_top_k=2)\n",
+    "product_summary_query_engine = product_summary_index.as_query_engine(similarity_top_k=5)\n",
     "cluster_solutions_query_engine = cluster_solutions_index.as_query_engine(similarity_top_k=5)"
    ]
   },
