Extragere date de produs

--- a/notebooks/Data_Products_step_3_insights.ipynb
+++ b/notebooks/Data_Products_step_3_insights.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OPENAI_API_KEY is ready\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -33,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +104,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "asin_list_path = './data/external/asin_list.csv'\n",
+    "# asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/asin_list.csv'\n",
     "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()\n",
     "\n",
     "query = text(\"SELECT * FROM products WHERE asin IN :asin_list\")\n",
@@ -782,12 +791,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "###########\n",
+    "#################################\n",
     "########### TESTING #############"
    ]
   },
@@ -1144,6 +1152,13 @@
     "                print(\" \" * col + \"^\")\n",
     "                break"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
