--- a/notebooks/Data_Reviews_step_2a_sentiment_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2a_sentiment_extraction.ipynb
@@ -69,7 +69,7 @@
     "            df = pd.read_csv(file_path)\n",
     "            reviews = pd.concat([reviews, df])\n",
     "    \n",
-    "    return reviews\n"
+    "    return reviews"
    ]
   },
   {
@@ -113,13 +113,6 @@
     "    \n",
     "    return pd.Series([positive, negative])\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -2317,7 +2310,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews.to_csv('reviews_with_sentiment.csv', index=False)"
+    "# save_path = './data/interim/reviews_with_sentiment.csv'\n",
+    "save_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/reviews_with_sentiment.csv'\n",
+    "reviews.to_csv(save_path, index=False)"
    ]
   }
  ],
