lucrat la 2b data extraction din produse

--- a/notebooks/Data_Products_step_2_extraction.ipynb
+++ b/notebooks/Data_Products_step_2_extraction.ipynb
@@ -167,37 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pretty_print_conversation(messages):\n",
-    "    role_to_color = {\n",
-    "        \"system\": \"red\",\n",
-    "        \"user\": \"green\",\n",
-    "        \"assistant\": \"blue\",\n",
-    "        \"function\": \"magenta\",\n",
-    "    }\n",
-    "    \n",
-    "    formatted_messages = []\n",
-    "    for message in messages:\n",
-    "        if message[\"role\"] == \"system\":\n",
-    "            formatted_messages.append(f\"system: {message['content']}\\n\")\n",
-    "        elif message[\"role\"] == \"user\":\n",
-    "            formatted_messages.append(f\"user: {message['content']}\\n\")\n",
-    "        elif message[\"role\"] == \"assistant\" and message.get(\"function_call\"):\n",
-    "            formatted_messages.append(f\"assistant: {message['function_call']}\\n\")\n",
-    "        elif message[\"role\"] == \"assistant\" and not message.get(\"function_call\"):\n",
-    "            formatted_messages.append(f\"assistant: {message['content']}\\n\")\n",
-    "        elif message[\"role\"] == \"function\":\n",
-    "            formatted_messages.append(f\"function ({message['name']}): {message['content']}\\n\")\n",
-    "    for formatted_message in formatted_messages:\n",
-    "        print(\n",
-    "            colored(\n",
-    "                formatted_message,\n",
-    "                role_to_color[messages[formatted_messages.index(formatted_message)][\"role\"]],\n",
-    "            )\n",
-    "        )"
+    "def remove_brand(strings, brand_column):\n",
+    "    cleaned_strings = []\n",
+    "    for string, brand in zip(strings, brand_column):\n",
+    "        cleaned_string = string.replace(brand, '').strip()\n",
+    "        cleaned_strings.append(cleaned_string)\n",
+    "    return cleaned_strings\n",
+    "\n",
+    "product['product_information_title'] = remove_brand(product.title, product.product_information_brand)\n",
+    "product_tile = product['product_information_title'].iloc[0]\n",
+    "product_tile"
    ]
   },
   {
@@ -430,11 +413,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# products_path = \"./data/interim/products.csv\"\n",
+    "    # create a dictionary with key-value pairs for renaming\n",
+    "rename_dict = {\n",
+    "        'price.symbol': 'price_symbol',\n",
+    "        'badges.best_seller': 'bestsellers_rank',\n",
+    "        'badges.amazon_prime': 'badges_amazon_prime',\n",
+    "        'badges.amazon_сhoice': 'badges_amazon_choice',\n",
+    "        'reviews.total_reviews': 'reviews_total_reviews',\n",
+    "        'reviews.answered_questions': 'reviews_answered_questions',\n",
+    "        'reviews.rating': 'reviews_rating',\n",
+    "        'product_information.available_from': 'product_information_available_from',\n",
+    "        'product_information.available_from_utc': 'product_information_available_from_utc',\n",
+    "        'product_information.available_for_days': 'product_information_available_for_days',\n",
+    "        'product_information.available_for_months': 'product_information_available_for_months',\n",
+    "        'product_information.brand': 'product_information_brand',\n",
+    "        'product_information.department': 'product_information_department',\n",
+    "        'product_information.dimensions': 'product_information_dimensions',\n",
+    "        'product_information.manufacturer': 'product_information_manufacturer',\n",
+    "        'product_information.model_number': 'product_information_model_number',\n",
+    "        'product_information.qty_per_order': 'product_information_qty_per_order',\n",
+    "        'product_information.store_id': 'product_information_store_id',\n",
+    "        'product_information.weight': 'product_information_weight',\n",
+    "        'price.before_price': 'price_before_price',\n",
+    "        'price.currency': 'price_currency',\n",
+    "        'price.current_price': 'price_current_price',\n",
+    "        'price.discounted': 'price_discounted',\n",
+    "        'price.savings_amount': 'price_savings_amount',\n",
+    "        'price.savings_percent': 'price_savings_percent',\n",
+    "        'url': 'url',\n",
+    "        'title': 'title',\n",
+    "        'description': 'description',\n",
+    "        'feature_bullets': 'feature_bullets',\n",
+    "        'variants': 'variants',\n",
+    "        'categories': 'categories',\n",
+    "        'asin': 'asin',\n",
+    "        'item_available': 'item_available',\n",
+    "        'main_image': 'main_image',\n",
+    "        'total_images': 'total_images',\n",
+    "        'images': 'images',\n",
+    "        'total_videos': 'total_videos',\n",
+    "        'videos': 'videos',\n",
+    "        'delivery_message': 'delivery_message',\n",
+    "        'sponsored_products': 'sponsored_products',\n",
+    "        'also_bought': 'also_bought',\n",
+    "        'other_sellers': 'other_sellers',\n",
+    "        'product_description_data': 'product_description_data'\n",
+    "    }\n",
+    "    \n",
+    "product.rename(columns=rename_dict, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# products_path = \"./data/interim/products_with_data.csv\"\n",
     "product_path = \"/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/products_with_data.csv\"\n",
     "product.to_csv(product_path, index=False)"
    ]
@@ -569,62 +608,6 @@
     "\n",
     "# Create the table\n",
     "Base.metadata.create_all(engine)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # create a dictionary with key-value pairs for renaming\n",
-    "rename_dict = {\n",
-    "        'price.symbol': 'price_symbol',\n",
-    "        'badges.best_seller': 'bestsellers_rank',\n",
-    "        'badges.amazon_prime': 'badges_amazon_prime',\n",
-    "        'badges.amazon_сhoice': 'badges_amazon_choice',\n",
-    "        'reviews.total_reviews': 'reviews_total_reviews',\n",
-    "        'reviews.answered_questions': 'reviews_answered_questions',\n",
-    "        'reviews.rating': 'reviews_rating',\n",
-    "        'product_information.available_from': 'product_information_available_from',\n",
-    "        'product_information.available_from_utc': 'product_information_available_from_utc',\n",
-    "        'product_information.available_for_days': 'product_information_available_for_days',\n",
-    "        'product_information.available_for_months': 'product_information_available_for_months',\n",
-    "        'product_information.brand': 'product_information_brand',\n",
-    "        'product_information.department': 'product_information_department',\n",
-    "        'product_information.dimensions': 'product_information_dimensions',\n",
-    "        'product_information.manufacturer': 'product_information_manufacturer',\n",
-    "        'product_information.model_number': 'product_information_model_number',\n",
-    "        'product_information.qty_per_order': 'product_information_qty_per_order',\n",
-    "        'product_information.store_id': 'product_information_store_id',\n",
-    "        'product_information.weight': 'product_information_weight',\n",
-    "        'price.before_price': 'price_before_price',\n",
-    "        'price.currency': 'price_currency',\n",
-    "        'price.current_price': 'price_current_price',\n",
-    "        'price.discounted': 'price_discounted',\n",
-    "        'price.savings_amount': 'price_savings_amount',\n",
-    "        'price.savings_percent': 'price_savings_percent',\n",
-    "        'url': 'url',\n",
-    "        'title': 'title',\n",
-    "        'description': 'description',\n",
-    "        'feature_bullets': 'feature_bullets',\n",
-    "        'variants': 'variants',\n",
-    "        'categories': 'categories',\n",
-    "        'asin': 'asin',\n",
-    "        'item_available': 'item_available',\n",
-    "        'main_image': 'main_image',\n",
-    "        'total_images': 'total_images',\n",
-    "        'images': 'images',\n",
-    "        'total_videos': 'total_videos',\n",
-    "        'videos': 'videos',\n",
-    "        'delivery_message': 'delivery_message',\n",
-    "        'sponsored_products': 'sponsored_products',\n",
-    "        'also_bought': 'also_bought',\n",
-    "        'other_sellers': 'other_sellers',\n",
-    "        'product_description_data': 'product_description_data'\n",
-    "    }\n",
-    "    \n",
-    "product.rename(columns=rename_dict, inplace=True)"
    ]
   },
   {
