--- a/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
+++ b/notebooks/Data_Reviews_step_2b_data_extraction.ipynb
@@ -71,17 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "asin_list_path = './data/external/asin_list.csv'\n",
-    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +81,7 @@
     "    num_tokens = len(encoding.encode(string))\n",
     "    return num_tokens\n",
     "\n",
-    "def num_tokens_from_messages(messages, model=\"gpt-3.5-turbo-0301\"):\n",
+    "def num_tokens_from_messages(messages, model=\"gpt-3.5-turbo\"):\n",
     "    \"\"\"Returns the number of tokens used by a list of messages.\"\"\"\n",
     "    try:\n",
     "        encoding = tiktoken.encoding_for_model(model)\n",
@@ -99,15 +89,15 @@
     "        print(\"Warning: model not found. Using cl100k_base encoding.\")\n",
     "        encoding = tiktoken.get_encoding(\"cl100k_base\")\n",
     "    if model == \"gpt-3.5-turbo\":\n",
-    "        print(\"Warning: gpt-3.5-turbo may change over time. Returning num tokens assuming gpt-3.5-turbo-0301.\")\n",
+    "        print(\"Warning: gpt-3.5-turbo may change over time. Returning num tokens assuming gpt-3.5-turbo.\")\n",
     "        return num_tokens_from_messages(messages, model=\"gpt-3.5-turbo\")\n",
     "    elif model == \"gpt-4\":\n",
-    "        print(\"Warning: gpt-4 may change over time. Returning num tokens assuming gpt-4-0314.\")\n",
-    "        return num_tokens_from_messages(messages, model=\"gpt-4-0314\")\n",
-    "    elif model == \"gpt-3.5-turbo-0301\":\n",
+    "        print(\"Warning: gpt-4 may change over time. Returning num tokens assuming gpt-4\")\n",
+    "        return num_tokens_from_messages(messages, model=\"gpt-4\")\n",
+    "    elif model == \"gpt-3.5-turbo\":\n",
     "        tokens_per_message = 4  # every message follows <|start|>{role/name}\\n{content}<|end|>\\n\n",
     "        tokens_per_name = -1  # if there's a name, the role is omitted\n",
-    "    elif model == \"gpt-4-0314\":\n",
+    "    elif model == \"gpt-4\":\n",
     "        tokens_per_message = 3\n",
     "        tokens_per_name = 1\n",
     "    else:\n",
@@ -125,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,11 +172,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reviews = pd.read_csv(\"reviews_with_sentiment.csv\")"
+    "#asin_list_path = './data/external/asin_list.csv'\n",
+    "asin_list_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/asin_list.csv'\n",
+    "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# reviews_path = './data/interim/reviews_with_sentiment.csv'\n",
+    "reviews_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/reviews_with_sentiment.csv'\n",
+    "reviews = pd.read_csv(reviews_path)"
    ]
   },
   {
@@ -205,19 +208,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/f6/0jn5yf2x1b319g8j96pnjbwh0000gn/T/ipykernel_55476/2115158235.py:14: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  reviews_filtered['date.date'] = pd.to_datetime(reviews_filtered['date.date'])\n"
+     "ename": "KeyError",
+     "evalue": "'asin.original'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[0;32m~/anaconda3/envs/oaie/lib/python3.10/site-packages/pandas/core/indexes/base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3801\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[0;32m~/anaconda3/envs/oaie/lib/python3.10/site-packages/pandas/_libs/index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/anaconda3/envs/oaie/lib/python3.10/site-packages/pandas/_libs/index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'asin.original'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[8], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# Get the value counts for each unique value of 'asin.original'\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m counts \u001b[39m=\u001b[39m reviews[\u001b[39m'\u001b[39;49m\u001b[39masin.original\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mvalue_counts()\n\u001b[1;32m      4\u001b[0m \u001b[39m# Keep only the top 5 values\u001b[39;00m\n\u001b[1;32m      5\u001b[0m top \u001b[39m=\u001b[39m counts\u001b[39m.\u001b[39mhead(\u001b[39m10\u001b[39m)\n",
+      "File \u001b[0;32m~/anaconda3/envs/oaie/lib/python3.10/site-packages/pandas/core/frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   3806\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 3807\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   3808\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   3809\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[0;32m~/anaconda3/envs/oaie/lib/python3.10/site-packages/pandas/core/indexes/base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[0;32m-> 3804\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3805\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3806\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3807\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3808\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'asin.original'"
      ]
     }
    ],
@@ -241,7 +253,7 @@
     "reviews_last_12_months = reviews_filtered[reviews_filtered['date.date'] >= date_12_months_ago]\n",
     "\n",
     "# keep only latest  x reviews\n",
-    "reviews_count_filtered = reviews_last_12_months.groupby('asin.original').tail(150)\n",
+    "reviews_count_filtered = reviews_last_12_months.groupby('asin.original').tail(200)\n",
     "\n",
     "# reset index\n",
     "reviews_count_filtered = reviews_count_filtered.reset_index(drop=True)\n",
@@ -1315,13 +1327,6 @@
    "source": [
     "reviews_df.to_csv('data/reviews_df_interim.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "attachments": {},
