update on saving location

--- a/notebooks/Data_Products_step_3_insights.ipynb
+++ b/notebooks/Data_Products_step_3_insights.ipynb
@@ -251,22 +251,22 @@
     "# https://towardsdatascience.com/an-introduction-to-openai-function-calling-e47e7cd7680e\n",
     "functions = [\n",
     "    {\n",
-    "        \"name\": \"product_summary\",\n",
+    "        \"name\": \"product_summary_function\",\n",
     "        \"description\": \"Provide a detailed description of a product based on observations on simmilar products\",\n",
     "        \"parameters\": {\n",
     "            \"type\": \"object\",\n",
     "            \"properties\": {\n",
-    "                \"Product Summary\": {\n",
+    "                \"product_summary\": {\n",
     "                    \"type\": \"string\",\n",
     "                    \"description\": \"Write a single product fact sheet summary of a product based on these observations from an ecommerce site, in 200 words. Exclude brand names.\"\n",
     "                },\n",
-    "                \"Outliers\": {\n",
+    "                \"product_summary_outliers\": {\n",
     "                    \"type\": \"string\",\n",
     "                    \"description\": \"Identify if any outliers exist and explain them. Example: B09VBZZ9C8 (<asin>) is an outlier as it includes 3 mini magnetic drawing boards \\\n",
     "                                    instead of a single board, and B085Q3TLF8 stands out for its glowing in the dark feature.\"\\\n",
     "                }\n",
     "            },\n",
-    "            \"required\": [\"Product Summary\", \"Outliers\"]\n",
+    "            \"required\": [\"product_summary\", \"product_summary_outliers\"]\n",
     "        },\n",
     "    }\n",
     "]"
@@ -286,7 +286,7 @@
     "response =  chat_completion_request(\n",
     "    messages=messages,\n",
     "    functions=functions,\n",
-    "    function_call={\"name\": \"product_summary\"},\n",
+    "    function_call={\"name\": \"product_summary_function\"},\n",
     "    temperature=0,\n",
     "    model=GPT_MODEL\n",
     ")\n",
@@ -906,81 +906,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "product_data_interim ={}\n",
+    "for key in initial_responses.keys():\n",
+    "    product_data_interim[key] = eval(initial_responses[key][0]['message']['function_call']['arguments'])\n",
+    "\n",
+    "product_data = {}\n",
+    "for main_key in product_data_interim.keys():\n",
+    "    for secondary_key in product_data_interim[main_key].keys():\n",
+    "        product_data[secondary_key] = product_data_interim[main_key][secondary_key]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'product_summary': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'product_summary',\n",
-       "     'arguments': '{\\n  \"Product Summary\": \"The Raised Garden Bed is a 6x3x2ft galvanized planter box designed for growing vegetables, flowers, and herbs. It is made of stable thickened steel with an evaluated coating paint, ensuring long-term use without rusting. The open bottom design allows for good drainage, promoting healthy plant growth. Setting up the garden bed is quick and easy, as it does not require any tools. The butterfly screws provided can be fastened by hand in just 5-10 minutes. The garden bed also features a cured edge for safety, preventing any injuries to your hands.\",\\n  \"Outliers\": \"\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'what_is_in_the_box': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'what_is_in_the_box',\n",
-       "     'arguments': '{\\n  \"In_the_Box\": \"The package includes the FRIZIONE Galvanized Metal Raised Garden Bed and all the necessary hardware for assembly.\",\\n  \"In_the_Box_Outliers\": \"The package includes the FRIZIONE Galvanized Metal Raised Garden Bed and all the necessary hardware for assembly.\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'technical_facts': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'technical_facts_function',\n",
-       "     'arguments': '{\\n  \"technical_facts\": \"The garden bed is made of galvanized steel with an anti-rust coating. It has a 2ft depth and measures 6x3ft in size.\",\\n  \"technical_facts_outliers\": \"\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'features': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'features_function',\n",
-       "     'arguments': '{\\n\"features\": \"1. Size: 6x3x2ft, providing ample growing space for vegetables, herbs, and flowers.\\\\n2. Made of stable thickened steel with evaluated coating paint, ensuring long-term use without rusting.\\\\n3. Open bottom design for good drainage.\\\\n4. Easy setup without the need for tools.\\\\n5. Cured edge for safety.\",\\n\"features_outliers\": \"\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'how_product_use': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'how_product_use_function',\n",
-       "     'arguments': '{\\n  \"how_the_product_is_used\": \"The Raised Garden Bed is used for growing vegetables, flowers, and herbs. It provides a convenient and organized space for gardening.\",\\n  \"how_the_product_is_used_outliers\": \"There are no outliers in how the Raised Garden Bed is used.\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'where_product_use': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'where_product_use_function',\n",
-       "     'arguments': '{\\n\"where_the_product_is_used\": \"The Raised Garden Bed can be used outdoors in gardens, yards, balconies, or any suitable outdoor space.\",\\n\"where_the_product_is_used_outliers\": \"The KGAR Metal Raised Garden Bed can be used in gardens, yards, or any outdoor space where you want to grow plants. It is suitable for both residential and commercial use.\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'user_description': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'user_description_function',\n",
-       "     'arguments': '{\\n  \"user_description\": \"This product is suitable for gardeners of all levels, from beginners to experienced enthusiasts.\",\\n  \"user_description_outliers\": \"\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'packaging_description': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'product_packaging_function',\n",
-       "     'arguments': '{\\n  \"product_packaging\": \"The Raised Garden Bed is packaged in a sturdy box, ensuring safe delivery. The product is packaged in a sturdy box to ensure safe delivery. The product comes in a sturdy package that includes the raised garden bed, a weed barrier, 8 T-type tags, and 2 gloves. The packaging is suitable for gifting. The garden bed comes in a sturdy package that includes all necessary accessories for assembly. The FRIZIONE Galvanized Metal Raised Garden Bed comes in a sturdy package that ensures safe delivery. The FRIZIONE Galvanized Metal Raised Garden Bed comes in a sturdy package with all the necessary hardware for assembly. The product is packaged in a sturdy box to ensure safe delivery. The product comes in a sturdy package that includes all the necessary parts for assembly. The product is packaged in a sturdy box to ensure safe delivery. The garden beds are packaged in a sturdy box, and the package includes installation gloves and spare screws. The product is packaged in a sturdy box. The Raised Garden Bed is packaged in a sturdy recyclable box, ensuring safe delivery. The garden bed is packaged in a sturdy box to ensure safe delivery. The packaging is suitable for gifting. The garden bed kit comes in a sturdy package that ensures the product is well-protected during shipping. It is also suitable for gifting. The product is packaged in a sturdy box to ensure safe delivery. The KGAR Metal Raised Garden Bed comes in a sturdy package that includes the metal planter box and all the necessary accessories for installation. The packaging is designed to protect the product during shipping and is suitable for gifting.\",\\n  \"product_packaging_outliers\": \"\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'season_description': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'product_seasonal_use_function',\n",
-       "     'arguments': '{\\n  \"product_seasonal_use\": \"The garden bed can be used throughout the year, depending on the climate and the types of plants being grown.\",\\n  \"product_seasonal_use_outliers\": \"\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}],\n",
-       " 'when_product_use': [{'index': 0,\n",
-       "   'message': {'role': 'assistant',\n",
-       "    'content': None,\n",
-       "    'function_call': {'name': 'when_product_use_function',\n",
-       "     'arguments': '{\\n  \"when_the_product_is_used\": \"The garden bed can be used at any time of the day or week, depending on the user\\'s preference and gardening schedule.\",\\n  \"when_the_product_is_used_outliers\": \"The KGAR Metal Raised Garden Bed can be used at any time of the day or week, depending on your gardening schedule and preferences.\"\\n}'}},\n",
-       "   'finish_reason': 'stop'}]}"
+       "{'Product Summary': 'The Raised Garden Bed is a 6x3x2ft galvanized planter box designed for growing vegetables, flowers, and herbs. It is made of stable thickened steel with an evaluated coating paint, ensuring long-term use without rusting. The open bottom design allows for good drainage, promoting healthy plant growth. Setting up the garden bed is quick and easy, as it does not require any tools. The butterfly screws provided can be fastened by hand in just 5-10 minutes. The garden bed also features a cured edge for safety, preventing any injuries to your hands.',\n",
+       " 'Outliers': '',\n",
+       " 'In_the_Box': 'The package includes the FRIZIONE Galvanized Metal Raised Garden Bed and all the necessary hardware for assembly.',\n",
+       " 'In_the_Box_Outliers': 'The package includes the FRIZIONE Galvanized Metal Raised Garden Bed and all the necessary hardware for assembly.',\n",
+       " 'technical_facts': 'The garden bed is made of galvanized steel with an anti-rust coating. It has a 2ft depth and measures 6x3ft in size.',\n",
+       " 'technical_facts_outliers': '',\n",
+       " 'features': '1. Size: 6x3x2ft, providing ample growing space for vegetables, herbs, and flowers.\\n2. Made of stable thickened steel with evaluated coating paint, ensuring long-term use without rusting.\\n3. Open bottom design for good drainage.\\n4. Easy setup without the need for tools.\\n5. Cured edge for safety.',\n",
+       " 'features_outliers': '',\n",
+       " 'how_the_product_is_used': 'The Raised Garden Bed is used for growing vegetables, flowers, and herbs. It provides a convenient and organized space for gardening.',\n",
+       " 'how_the_product_is_used_outliers': 'There are no outliers in how the Raised Garden Bed is used.',\n",
+       " 'where_the_product_is_used': 'The Raised Garden Bed can be used outdoors in gardens, yards, balconies, or any suitable outdoor space.',\n",
+       " 'where_the_product_is_used_outliers': 'The KGAR Metal Raised Garden Bed can be used in gardens, yards, or any outdoor space where you want to grow plants. It is suitable for both residential and commercial use.',\n",
+       " 'user_description': 'This product is suitable for gardeners of all levels, from beginners to experienced enthusiasts.',\n",
+       " 'user_description_outliers': '',\n",
+       " 'product_packaging': 'The Raised Garden Bed is packaged in a sturdy box, ensuring safe delivery. The product is packaged in a sturdy box to ensure safe delivery. The product comes in a sturdy package that includes the raised garden bed, a weed barrier, 8 T-type tags, and 2 gloves. The packaging is suitable for gifting. The garden bed comes in a sturdy package that includes all necessary accessories for assembly. The FRIZIONE Galvanized Metal Raised Garden Bed comes in a sturdy package that ensures safe delivery. The FRIZIONE Galvanized Metal Raised Garden Bed comes in a sturdy package with all the necessary hardware for assembly. The product is packaged in a sturdy box to ensure safe delivery. The product comes in a sturdy package that includes all the necessary parts for assembly. The product is packaged in a sturdy box to ensure safe delivery. The garden beds are packaged in a sturdy box, and the package includes installation gloves and spare screws. The product is packaged in a sturdy box. The Raised Garden Bed is packaged in a sturdy recyclable box, ensuring safe delivery. The garden bed is packaged in a sturdy box to ensure safe delivery. The packaging is suitable for gifting. The garden bed kit comes in a sturdy package that ensures the product is well-protected during shipping. It is also suitable for gifting. The product is packaged in a sturdy box to ensure safe delivery. The KGAR Metal Raised Garden Bed comes in a sturdy package that includes the metal planter box and all the necessary accessories for installation. The packaging is designed to protect the product during shipping and is suitable for gifting.',\n",
+       " 'product_packaging_outliers': '',\n",
+       " 'product_seasonal_use': 'The garden bed can be used throughout the year, depending on the climate and the types of plants being grown.',\n",
+       " 'product_seasonal_use_outliers': '',\n",
+       " 'when_the_product_is_used': \"The garden bed can be used at any time of the day or week, depending on the user's preference and gardening schedule.\",\n",
+       " 'when_the_product_is_used_outliers': 'The KGAR Metal Raised Garden Bed can be used at any time of the day or week, depending on your gardening schedule and preferences.'}"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "initial_responses"
+    "product_data"
    ]
   },
   {
@@ -993,23 +969,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('summarised_product_information.json', 'w') as f:\n",
-    "    json.dump(initial_responses, f)"
+    "with open('/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/summarised_product_information.json', 'w') as f:\n",
+    "    json.dump(product_data, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Check if the JSON file is valid\n",
     "import json\n",
-    "with open('/Users/vladbordei/Documents/Development/oaie2/summarised_product_information.json') as file:\n",
+    "with open('/Users/vladbordei/Documents/Development/ProductExplorer/data/interim/summarised_product_information.json') as file:\n",
     "    try:\n",
     "        data = json.load(file)\n",
     "    except json.JSONDecodeError as e:\n",
