adaugat niste notite pe noua structura

--- a/notebooks/Data_Products_step_2_extraction.ipynb
+++ b/notebooks/Data_Products_step_2_extraction.ipynb
@@ -1,25 +1,34 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 66,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY is ready\n"
-     ]
-    }
-   ],
+   "source": [
+    "## STRUCTURE\n",
+    "- Read Products info\n",
+    "    - Define data extraction function\n",
+    "    - Extract the info from the products with GPT\n",
+    "    - Process the results\n",
+    "    - save to csv\n",
+    "- Upload to sql\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
-    "import tiktoken\n",
     "import openai\n",
+    "\n",
+    "import requests\n",
+    "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
+    "from termcolor import colored\n",
+    "\n",
     "\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.getenv('OPENAI_API_KEY')\n",
@@ -110,7 +119,6 @@
    "source": [
     "# asin_list_path = './data/external/asin_list.csv'\n",
     "asin_list_path = '/Users/vladbordei/Documents/Development/ProductExplorer/data/external/asin_list.csv'\n",
-    "\n",
     "asin_list = pd.read_csv(asin_list_path)['asin'].tolist()"
    ]
   },
@@ -120,19 +128,6 @@
    "metadata": {},
    "source": [
     "https://github.com/openai/openai-cookbook/blob/main/examples/How_to_call_functions_with_chat_models.ipynb"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 73,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import json\n",
-    "import openai\n",
-    "import requests\n",
-    "from tenacity import retry, wait_random_exponential, stop_after_attempt\n",
-    "from termcolor import colored\n"
    ]
   },
   {
