--- a/notebooks/Data_Products_step_3_insights.ipynb
+++ b/notebooks/Data_Products_step_3_insights.ipynb
@@ -1,18 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY is ready\n"
-     ]
-    }
-   ],
+   "source": [
+    "## STRUCTURE\n",
+    "- Process information from all products to generate a summary of the product\n",
+    "    - Process the csv data and save as dictionaries\n",
+    "    - Summarize each of the dictionaries with GPT and save in another dictionary\n",
+    "    - Export the general product description to json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
