--- a/notebooks/Data_Products_step_4_summarization.ipynb
+++ b/notebooks/Data_Products_step_4_summarization.ipynb
@@ -1,18 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "OPENAI_API_KEY is ready\n"
-     ]
-    }
-   ],
+   "source": [
+    "## STRUCTURE\n",
+    "- Eliminate a part of the general product information in order to minimize token cost\n",
+    "    - Read general product data\n",
+    "    - Define minimum required product information and save as new dictionary\n",
+    "    - Save to json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
